stm_model_test/run_031526/logs/context_models_31434506.err
Traceback (most recent call last):
  File "/home/gmvaz/2026_GEMs/stm_model_test/generate_models3.py", line 74, in <module>
    sys.exit(main())
             ^^^^^^
  File "/home/gmvaz/2026_GEMs/stm_model_test/generate_models3.py", line 52, in main
    threshold_model = args.threshold_csv[args.threshold_csv["genes"].isin(model_genes)]
                                         ~~~~~~~~~~~~~~~~~~^^^^^^^^^
TypeError: string indices must be integers, not 'str'
